load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")

cc_library(
    name = "grante",
    srcs = glob(["**/*.cpp"]), 
    hdrs = glob(["**/*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "@boost//:functional",
        "@boost//:lambda",
        "@boost//:math",
        "@boost//:random",
        "@boost//:serialization",
        "@boost//:test",
    ],
    copts = ["-std=c++17"]
)
