load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "grante",
    srcs = glob(["**/*.cpp"], exclude = ["**/*_test.cpp"]), 
    hdrs = glob(["**/*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "@boost//:functional",
        "@boost//:lambda",
        "@boost//:math",
        "@boost//:random",
        "@boost//:serialization",
        "@boost//:test",
    ],
    copts = ["-std=c++17"]
)

cc_test(
    name = "FactorGraph_test",
    srcs = ["FactorGraph_test.cpp"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":grante",
    ],
)

cc_test(
    name = "Conditioning_test",
    srcs = ["Conditioning_test.cpp"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":grante",
    ],
)
cc_test(
    name = "BeliefPropagation_test",
    srcs = ["BeliefPropagation_test.cpp"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":grante",
    ],
)
